Tests/CompilerTests/negative/invalid-builtin-dereference.hylo
//! no-std

fun use(x: Void) {
  let p = Builtin.address(of: x)
  let q = p as* Void
}

public fun main() {
  use(())
}
